--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <div id="header">
+        <!-- <h3 class="anthem">Blue is the color</h3> -->
         <img src="images/club-logo.png" id="club-logo">
+        <!-- <h3 class="anthem">Chelsea is our name</h3> -->
     </div>
 
     <div id="search"></div>
