Flag and Radar map

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 
 
 </head>
-<body>
+<body id="body">
     <div id="header">
-        <!-- <h3 class="anthem">Blue is the color</h3> -->
+        <h3 class="anthem">Blue is the color</h3>
         <img src="images/club-logo.png" id="club-logo">
-        <!-- <h3 class="anthem">Chelsea is our name</h3> -->
+        <h3 class="anthem">Chelsea is our name</h3>
     </div>
 
-    <div id="search"></div>
+    <div id="search">
 
-    <div class="center" id="main"></div>
+    </div>
+
+    <div class="center" id="main">
+        
+    </div>
 
 
     <div id="chart-div"></div>
@@ -26,9 +30,9 @@
 
 
     <script type="module" src="app.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
-    </script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ 
 
 </body>
 </html>
