--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 </head>
-<body id="body">
+<body id="body" tabindex="2">
     <div id="header">
         
         <img src="images/club-logo.png" id="club-logo">
