--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
 
 
-    <div id="chart-div"></div>
-    <div id="height-chart"></div>
+    <div id="chart-div" class="center"></div>
+    <div id="height-chart" class="center"></div>
 
 
 
