some chart fixes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         
     </div>
 
-
-    <div id="chart-div" class="center"></div>
-    <div id="height-chart" class="center"></div>
+    <div id="chart-background">
+        <div id="chart-div" class=""></div>
+        <div id="height-chart" class=""></div>
+    </div>
 
 
 
